epserde/tests/fail/drop_memcase.stderr
error[E0505]: cannot move out of `mem_case` because it is borrowed
  --> tests/fail/drop_memcase.rs:17:10
   |
15 |     let mem_case = unsafe { Vec::<i32>::read_mem(cursor, buffer.len()).unwrap() };
   |         -------- binding `mem_case` declared here
16 |     let u = mem_case.uncase();
   |             -------- borrow of `mem_case` occurs here
17 |     drop(mem_case);
   |          ^^^^^^^^ move out of `mem_case` occurs here
18 |     let _u = u;
   |              - borrow later used here
